Added login endpoint and did some cleanup on user endpoints
