# controllers/UserController.py
@@ -10,28 +10,35 @@ user_blueprint = Blueprint('user', __name__)
 
 @user_blueprint.route('/user/<string:username>', methods=['GET'])
 def getUser(username: string) -> (Response, int):
-    us: UserService = UserService()
-    res: dict = us.getUser(username)
-    return jsonify(res), res["status"]
+    userService: UserService = UserService()
+
+    response: dict = userService.getUser(username)
+    return jsonify(response), response["status"]
 
 
 @user_blueprint.route('/user/<string:username>', methods=['DELETE'])
 def deleteUser(username: string) -> (Response, int):
-    us: UserService = UserService()
-    res: dict = us.deleteUser(username)
-    return jsonify(res), res["status"]
+    userService: UserService = UserService()
+
+    response: dict = userService.deleteUser(username)
+    return jsonify(response), response["status"]
 
 
 @user_blueprint.route('/user/register', methods=['POST'])
 def register() -> (Response, int):
-    data = request.get_json()
-    username = data.get('username')
-    password = data.get('password')
-    email = data.get('email')
-    name = data.get('name')
-    userDto = UserDto(username, password, email, name)
+    data: dict = request.get_json()
+    userDto: UserDto = UserDto.fromJson(data)
+    userService: UserService = UserService()
 
-    userService = UserService()
+    response: dict = userService.register(userDto)
+    return jsonify(response), response["status"]
 
-    userService.register(userDto)
-    return jsonify({"username": username}), 201
+
+@user_blueprint.route('/user/login', methods=['POST'])
+def login() -> (Response, int):
+    data: dict = request.get_json()
+    userDto: UserDto = UserDto.fromJson(data)
+    userService: UserService = UserService()
+
+    response: dict = userService.login(userDto)
+    return jsonify(response), response["status"]
